<resources>
    <string name="app_name">P-Cart</string>
    <string name="hello_blank_fragment">Hello kjhblank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="discription">Login Backgrond Image</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_with_social_media">Login With Social Media</string>
    <string name="or">Or</string>
    <string name="instagram_logo">instagram logo</string>
    <string name="facebook_logo">faceabook logo</string>
    <string name="google_icon">Google Icon</string>
    <string name="Twitter_icon">Twitter Icon</string>
    <string name="welcome_to_n_sign_in">WELCOME TO \n SIGN IN</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_no_or_e_mail_id">Phone No. or E-Mail id</string>
    <string name="password">Password</string>
    <string name="sign_up_LowerCase">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="phone_no">Phone no.</string>
    <string name="e_mail_id">E-Mail id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in_lowerCase">Sign in</string>
    <string name="have_an_account">Have an account</string>
    <string name="conform_password">Conform Password</string>
    <string name="search">Search</string>
    <string name="category">category</string>
    <string name="all_categories">All Categories</string>
    <string name="discount">Discount</string>
    <string name="mobile">Mobile</string>
    <string name="fashion">Fashion</string>
    <string name="grocery">Grocery</string>
    <string name="p_cart">P-Cart</string>
    <string name="Open" />
    <string name="Close" />
    <string name="choose_language">Choose Language</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="my_order">My Order</string>
    <string name="my_coupon">My Coupon</string>
    <string name="my_cart">My Cart</string>
    <string name="my_account">My Account</string>
    <string name="setting">Setting</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="nortification_perfrences">Nortification Perfrences</string>
    <string name="my_nortification">Nortification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cart">Cart</string>
    <string name="submit">Submit</string>
    <string name="open_drawer">open Drawer</string>
    <string name="microphone">MicroPhone</string>
    <string name="recommended_item">Recommended Item</string>
    <string name="banners">banners</string>
    <string name="watchlist_collection"><![CDATA[Watchlist & Collection]]></string>
    <string name="all">All</string>
    <string name="offers_coupons"><![CDATA[Offers & Coupons]]></string>
    <string name="address">My Addresses</string>
    <string name="add_a_new_address">+ Add a new address</string>
    <string name="content_discription">Content Discription</string>
    <string name="item_image">item image</string>
    <string name="pincode">Pincode</string>
    <string name="change">Change</string>
    <string name="continue_c">CONTINUE</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="price">Price</string>
    <string name="total_amount">Total Amount</string>
    <string name="price_details">Price Details</string>
    <string name="buy_now">Buy Now</string>
    <string name="more_quantity">More Quantity</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="enter_quantity">Enter Quantity</string>
</resources>