<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.initial_Screen.Registar_Frag">


    <ImageView
        android:id="@+id/login_background_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_img"
        android:contentDescription="@string/discription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_background_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/login_background_iv"
        app:layout_constraintTop_toTopOf="@+id/login_background_iv"
        app:layout_constraintVertical_bias="0.3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.47000003">

        <EditText
            android:id="@+id/user_Fname_edT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="@dimen/drawable_padding_edTxt"
            android:ems="16"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:minHeight="@dimen/minHeight"
            android:textColorHint="@color/tv_grey_color" />


        <EditText
            android:id="@+id/user_Lname_edT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/icon_user"
            android:drawablePadding="@dimen/drawable_padding_edTxt"
            android:ems="16"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:minHeight="@dimen/minHeight"
            android:textColorHint="@color/tv_grey_color" />

        <EditText
            android:id="@+id/phone_no_edT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/icon_phone_no"
            android:drawablePadding="@dimen/drawable_padding_edTxt"
            android:ems="16"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:minHeight="@dimen/minHeight"
            android:textColorHint="@color/tv_grey_color" />

        <EditText
            android:id="@+id/emailAddress_edT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="@dimen/drawable_padding_edTxt"
            android:ems="16"
            android:hint="@string/e_mail_id"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/minHeight"
            android:textColorHint="@color/tv_grey_color" />

        <EditText
            android:id="@+id/password_edT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="@dimen/drawable_padding_edTxt"
            android:ems="16"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="@dimen/minHeight"
            android:textColorHint="@color/tv_grey_color" />

        <EditText
            android:id="@+id/conform_password_edT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="@dimen/drawable_padding_edTxt"
            android:ems="16"
            android:hint="@string/conform_password"
            android:inputType="textPassword"
            android:minHeight="@dimen/minHeight"
            android:textColorHint="@color/tv_grey_color" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_customize_singup"
        android:ems="14"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_up"

        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/sign_in_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        android:textColor="@color/Dont_have_account"
        android:textSize="@dimen/Already_have_account_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/sign_in_tv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_in_lowerCase"
        android:textColor="@color/SplashScreen"
        android:textSize="@dimen/Already_have_account_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_account_tv"
        app:layout_constraintStart_toEndOf="@+id/sign_in_account_tv"
        app:layout_constraintTop_toTopOf="@+id/sign_in_account_tv"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>