<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.initial_Screen.SignIn_Frag">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/login_background_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_img"
        android:contentDescription="@string/discription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_n_sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/welcome_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_background_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/login_background_iv"
        app:layout_constraintTop_toTopOf="@+id/login_background_iv"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/user_Fname_edT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:drawableStart="@drawable/icon_user"
        android:drawablePadding="@dimen/drawable_padding_edTxt"
        android:ems="16"
        android:hint="@string/phone_no_or_e_mail_id"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/minHeight"
        android:textColorHint="@color/tv_grey_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_background_iv" />

    <EditText
        android:id="@+id/password_edT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/icon_password"
        android:drawablePadding="@dimen/drawable_padding_edTxt"
        android:ems="16"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="@dimen/minHeight"
        android:textColorHint="@color/tv_grey_color"
        app:layout_constraintEnd_toEndOf="@+id/user_Fname_edT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_Fname_edT"
        app:layout_constraintTop_toBottomOf="@+id/user_Fname_edT" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/SplashScreen"
        android:textSize="@dimen/Already_have_account_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="@+id/password_edT"
        app:layout_constraintTop_toBottomOf="@+id/password_edT"
        app:layout_constraintVertical_bias="0.32" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_customize_singup"
        android:ems="14"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/password_edT"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="@+id/password_edT"
        app:layout_constraintTop_toBottomOf="@+id/password_edT" />

    <TextView
        android:id="@+id/login_SM_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/Dont_have_account"
        android:textSize="@dimen/Already_have_account_txt"
        app:layout_constraintEnd_toStartOf="@+id/signUp_tv_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    <TextView
        android:id="@+id/signUp_tv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_up_LowerCase"
        android:textColor="@color/SplashScreen"
        android:textSize="@dimen/Already_have_account_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_SM_tv"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_SM_tv"
        app:layout_constraintTop_toTopOf="@+id/login_SM_tv"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>